# claims-nl-qa

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: security.yml
docs/: synthetic_claims.csv
src/claims_nl_qa/: __init__.py  config.py  data.py  eval.py  main.py  qa.py  retrieval.py
tests/: golden.yaml  test_api.py  test_data.py  test_eval.py  test_golden.py  test_qa.py  test_retrieval.py
