[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claims-nl-qa"
version = "0.1.0"
description = "Natural-language Q&A over synthetic healthcare claims (take-home)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pandas==2.2.3",
    "duckdb==1.1.3",
    "openai==1.57.4",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
